syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel); 
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc GetAllDiscounts (GetAllDiscountsRequest) returns (stream CouponModel);
	rpc GetSelectDiscounts (GetSelectDiscountsRequest) returns (stream CouponModel);
}

message GetDiscountRequest {
	string productName = 1;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message GetAllDiscountsRequest{

}

message GetSelectDiscountsRequest{
	repeated ShoppingCartItem shoppingCartItems = 1;
}

message ShoppingCartItem
{
	string productName = 1;
	string productId = 2;
}